<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <!-- Relative score layout container -->

    <RelativeLayout style="@style/top_relative_layout">

        <!-- Score background image -->

        <ImageView
            style="@style/img_score_background"
            android:src="@drawable/img_stadium" />

        <!-- Maine score layout container -->

        <LinearLayout style="@style/main_linear_layout">

            <!-- App title / Background color -->

            <LinearLayout style="@style/app_title_layout">

                <!-- App name -->

                <TextView
                    style="@style/txt_app_title"
                    android:text="@string/txt_score" />

            </LinearLayout>

            <!-- Shadow line -->

            <View style="@style/horizontal_shadow_line" />

            <!-- Score layout container -->

            <LinearLayout style="@style/score_layout">

                <!-- Team 1 score layout container -->

                <LinearLayout style="@style/country_layout">

                    <!-- Team 1 contry name -->

                    <TextView
                        android:id="@+id/team1_country_name"
                        style="@style/CountryName"
                        android:text="@string/romania" />

                    <!-- Team 1 flag image -->

                    <ImageView
                        android:id="@+id/team1_flag"
                        style="@style/img_flag"
                        android:src="@drawable/img_romania_flag" />

                    <!-- Team 1 score delimiter horizontal line -->

                    <View style="@style/score_delimiter_line" />

                    <!-- Score points -->

                    <TextView
                        android:id="@+id/team1_score"
                        style="@style/txt_score_points"
                        android:text="@string/team1_score" />

                    <!-- Goal button -->

                    <Button
                        style="@style/button_goal"
                        android:onClick="addScoreT1"
                        android:text="@string/txt_goal" />

                </LinearLayout>

                <!-- Team 2 score layout container -->

                <LinearLayout style="@style/country_layout">

                    <!-- Team 2 country name -->

                    <TextView
                        android:id="@+id/team2_country_name"
                        style="@style/CountryName"
                        android:text="@string/france" />

                    <!-- Team 2 flag image -->

                    <ImageView
                        android:id="@+id/team2_flag"
                        style="@style/img_flag"
                        android:src="@drawable/img_france_flag" />

                    <!-- Team 2 score delimiter horizontal line -->

                    <View style="@style/score_delimiter_line" />

                    <!-- Score points -->

                    <TextView
                        android:id="@+id/team2_score"
                        style="@style/txt_score_points"
                        android:text="@string/team2_score" />

                    <!-- Goal button -->

                    <Button
                        style="@style/button_goal"
                        android:onClick="addScoreT2"
                        android:text="@string/txt_goal" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <!-- Reset layout container -->

    <LinearLayout style="@style/reset_layout">

        <Button
            style="@style/button_reset"
            android:onClick="resetScore"
            android:text="@string/txt_reset" />

    </LinearLayout>

    <!-- Shadow line -->

    <View style="@style/horizontal_shadow_line" />

    <!-- Main cards layout container -->

    <LinearLayout style="@style/main_cards_layout">

        <!-- Team 1 cards layout container -->

        <LinearLayout style="@style/cards_layout">

            <!-- Team 1 yellow card layout -->

            <LinearLayout style="@style/team1_card_layout">

                <!-- Team 1 yellow card image -->

                <ImageButton
                    style="@style/img_card"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/img_yellow_card"
                    android:onClick="addYellowOnT1" />

                <!-- Team 1 yellow card points -->

                <TextView
                    android:id="@+id/team1_yellow_card"
                    style="@style/txt_card_points"
                    android:layout_marginRight="16dp"
                    android:text="@string/team1_yellow_card_points" />

            </LinearLayout>

            <!-- Team 1 red card layout -->

            <LinearLayout style="@style/team1_card_layout">

                <!-- Team 1 red card image -->

                <ImageButton
                    style="@style/img_card"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/img_red_card"
                    android:onClick="addRedOnT1" />

                <!-- Team 1 red card points -->

                <TextView
                    android:id="@+id/team1_red_card"
                    style="@style/txt_card_points"
                    android:layout_marginRight="16dp"
                    android:text="@string/team1_red_card_points" />

            </LinearLayout>

        </LinearLayout>

        <!-- Team 1 vertical separator line -->

        <View
            style="@style/card_layout_vertical_line"
            android:layout_marginRight="8dp" />

        <!-- Fault relative layout -->

        <RelativeLayout style="@style/fault_relative_layout">

            <!-- Fault representative image -->

            <ImageView
                style="@style/img_fault"
                android:src="@drawable/img_card_background" />

        </RelativeLayout>

        <!-- Team 2 vertical separator line -->

        <View
            style="@style/card_layout_vertical_line"
            android:layout_marginLeft="8dp" />

        <!-- Team 2 cards layout container -->

        <LinearLayout style="@style/cards_layout">

            <!-- Team 2 yellow card layout -->

            <LinearLayout style="@style/team2_card_layout">

                <!-- Team 2 yellow card points -->

                <TextView
                    android:id="@+id/team2_yellow_card"
                    style="@style/txt_card_points"
                    android:layout_marginLeft="16dp"
                    android:text="@string/team2_yellow_card_points" />

                <!-- Team 2 yellow card image -->

                <ImageButton
                    style="@style/img_card"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/img_yellow_card"
                    android:onClick="addYellowOnT2" />

            </LinearLayout>

            <!-- Team 2 red card layout -->

            <LinearLayout style="@style/team2_card_layout">

                <!-- Team 2 red card points -->

                <TextView
                    android:id="@+id/team2_red_card"
                    style="@style/txt_card_points"
                    android:layout_marginLeft="16dp"
                    android:text="@string/team2_red_card_points" />

                <!-- Team 2 red card image -->

                <ImageButton
                    style="@style/img_card"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/img_red_card"
                    android:onClick="addRedOnT2" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>




